tests/snapshots/snapshot_tests__random_board_snapshot_254.snap
---
source: tests/snapshot_tests.rs
expression: "(minions, recording)"
---
- ? idx: 1
    version: 1
  : Golden Polarizing Beatboxer
  ? idx: 2
    version: 1
  : Handless Forsaken
  ? idx: 3
    version: 1
  : Murozond
  ? idx: 4
    version: 1
  : Ring Matron
  ? idx: 5
    version: 1
  : Golden Corpse Refiner
  ? idx: 6
    version: 1
  : Murky
  ? idx: 7
    version: 1
  : Golden Crackling Cyclone
  ? idx: 8
    version: 1
  : Shifter Zerus
  ? idx: 9
    version: 1
  : Twilight Emissary
  ? idx: 10
    version: 1
  : "Golden Spawn of N'Zoth"
  ? idx: 11
    version: 1
  : "Kangor's Apprentice"
  ? idx: 12
    version: 1
  : Golden Unstable Ghoul
  ? idx: 13
    version: 1
  : Golden Annoy-o-Troupe
  ? idx: 14
    version: 1
  : "Golden Octosari, Wrap God"
- - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 6
      source:
        idx: 13
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 2
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 2
        version: 1
  - AfterAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 12
        version: 1
      amount: 10
      source:
        idx: 1
        version: 1
  - TakeDamage:
      target:
        idx: 1
        version: 1
      amount: 2
      source:
        idx: 12
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 12
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 12
        version: 1
  - AfterAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 6
      source:
        idx: 4
        version: 1
  - TakeDamage:
      target:
        idx: 4
        version: 1
      amount: 6
      source:
        idx: 13
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 4
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 4
        version: 1
  - AfterAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 5
      source:
        idx: 3
        version: 1
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 4
      source:
        idx: 10
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 10
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 10
        version: 1
  - AfterAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 6
      source:
        idx: 6
        version: 1
  - TakeDamage:
      target:
        idx: 6
        version: 1
      amount: 3
      source:
        idx: 9
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 9
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 9
        version: 1
  - AfterAttack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 4
      source:
        idx: 5
        version: 1
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 12
      source:
        idx: 14
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 5
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 5
        version: 1
  - AfterAttack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 1
      source:
        idx: 8
        version: 1
  - TakeDamage:
      target:
        idx: 8
        version: 1
      amount: 6
      source:
        idx: 13
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 8
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 8
        version: 1
  - AfterAttack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 8
      source:
        idx: 7
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 6
        version: 1
      amount: 8
      source:
        idx: 7
        version: 1
  - TakeDamage:
      target:
        idx: 7
        version: 1
      amount: 6
      source:
        idx: 6
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 6
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 6
        version: 1
  - Death:
      minion:
        idx: 7
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 7
        version: 1
  - AfterAttack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 12
      source:
        idx: 14
        version: 1
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 6
      source:
        idx: 13
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 14
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 14
        version: 1
  - Death:
      minion:
        idx: 13
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 13
        version: 1
  - AfterAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - End: BottomWin

